# tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  tools.cpp
.github/workflows/: cmake.yml
include/: fixed_string.hpp  functional.hpp  meta_struct.hpp  type_list.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  core_test.cpp
